# Vector-Average-with-C-Multithreading

./: CMakeLists.txt  README.md  vector_add_thread.cpp  vector_avg_thread.cpp
